// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new request body has correct commands 1`] = `
Object {
  "commands": Array [
    Object {
      "AddShape": Object {
        "baseShapeId": "$string",
        "name": "",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$boolean",
        "name": "",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$string",
        "name": "",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$string",
        "name": "",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$object",
        "name": "",
      },
    },
    Object {
      "AddField": Object {
        "name": "id",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {},
        },
      },
    },
    Object {
      "AddField": Object {
        "name": "isDone",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {},
        },
      },
    },
    Object {
      "AddField": Object {
        "name": "task",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {},
        },
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$list",
        "name": "",
      },
    },
    Object {
      "SetParameterShape": Object {
        "shapeDescriptor": Object {
          "ProviderInShape": Object {
            "consumingParameterId": "$listItem",
            "providerDescriptor": Object {
              "ShapeProvider": Object {},
            },
          },
        },
      },
    },
    Object {
      "AddRequest": Object {
        "httpMethod": "GET",
        "pathId": "path_it2OyjUysW",
      },
    },
    Object {
      "SetRequestBodyShape": Object {
        "bodyDescriptor": Object {
          "httpContentType": "application/json",
          "isRemoved": false,
        },
      },
    },
  ],
  "newRegion": Object {
    "diffDescription": Object {
      "assertion": Array [
        Object {
          "style": 0,
          "text": "Undocumented Body Observed",
        },
      ],
      "changeType": 0,
      "diffHash": "41bb570841f9d23b",
      "getJsonBodyToPreview": [Function],
      "location": Object {
        "inRequest": Object {
          "contentType": "application/json",
        },
        "inResponse": undefined,
        "method": "GET",
        "pathId": "path_it2OyjUysW",
      },
      "title": Array [
        Object {
          "style": 0,
          "text": "undocumented",
        },
        Object {
          "style": 1,
          "text": "application/json",
        },
        Object {
          "style": 0,
          "text": "request observed",
        },
      ],
    },
    "previewTabs": Array [
      Object {
        "allowsExpand": false,
        "assertion": Array [],
        "ignoreRule": Object {
          "diffHash": "41bb570841f9d23b",
          "newBodyInRequest": Object {
            "contentType": "application/json",
          },
        },
        "interactionPointers": Array [
          Object {
            "0": "8",
            "1": "e",
            "10": "f",
            "11": "6",
            "12": "d",
            "13": "-",
            "14": "4",
            "15": "d",
            "16": "3",
            "17": "c",
            "18": "-",
            "19": "b",
            "2": "f",
            "20": "a",
            "21": "7",
            "22": "1",
            "23": "-",
            "24": "5",
            "25": "e",
            "26": "3",
            "27": "7",
            "28": "9",
            "29": "2",
            "3": "f",
            "30": "3",
            "31": "7",
            "32": "8",
            "33": "0",
            "34": "c",
            "35": "e",
            "36": "4",
            "4": "9",
            "5": "5",
            "6": "b",
            "7": "1",
            "8": "-",
            "9": "4",
          },
          Object {
            "0": "8",
            "1": "e",
            "10": "f",
            "11": "6",
            "12": "d",
            "13": "-",
            "14": "4",
            "15": "d",
            "16": "3",
            "17": "c",
            "18": "-",
            "19": "b",
            "2": "f",
            "20": "a",
            "21": "7",
            "22": "1",
            "23": "-",
            "24": "5",
            "25": "e",
            "26": "3",
            "27": "7",
            "28": "9",
            "29": "2",
            "3": "f",
            "30": "3",
            "31": "7",
            "32": "8",
            "33": "0",
            "34": "c",
            "35": "e",
            "36": "4",
            "4": "9",
            "5": "5",
            "6": "b",
            "7": "1",
            "8": "-",
            "9": "4",
          },
        ],
        "invalid": true,
        "jsonTrailsByInteractions": Object {},
        "title": "application/json Request",
      },
    ],
    "toCommands": [Function],
    "updateSpecChoices": Object {
      "copy": Array [
        Object {
          "style": 0,
          "text": "Document",
        },
        Object {
          "style": 1,
          "text": "application/json",
        },
        Object {
          "style": 0,
          "text": "Request",
        },
      ],
      "includeNewBody": true,
      "isNewRegionDiff": true,
      "shapes": Array [],
    },
  },
}
`;

exports[`new response body has correct commands 1`] = `
Object {
  "commands": Array [
    Object {
      "AddShape": Object {
        "baseShapeId": "$string",
        "name": "",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$boolean",
        "name": "",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$string",
        "name": "",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$string",
        "name": "",
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$object",
        "name": "",
      },
    },
    Object {
      "AddField": Object {
        "name": "id",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {},
        },
      },
    },
    Object {
      "AddField": Object {
        "name": "isDone",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {},
        },
      },
    },
    Object {
      "AddField": Object {
        "name": "task",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {},
        },
      },
    },
    Object {
      "AddShape": Object {
        "baseShapeId": "$list",
        "name": "",
      },
    },
    Object {
      "SetParameterShape": Object {
        "shapeDescriptor": Object {
          "ProviderInShape": Object {
            "consumingParameterId": "$listItem",
            "providerDescriptor": Object {
              "ShapeProvider": Object {},
            },
          },
        },
      },
    },
    Object {
      "AddResponseByPathAndMethod": Object {
        "httpMethod": "GET",
        "httpStatusCode": 200,
        "pathId": "path_it2OyjUysW",
      },
    },
    Object {
      "SetResponseBodyShape": Object {
        "bodyDescriptor": Object {
          "httpContentType": "application/json",
          "isRemoved": false,
        },
      },
    },
  ],
  "newRegion": Object {
    "diffDescription": Object {
      "assertion": Array [
        Object {
          "style": 0,
          "text": "Undocumented Body Observed",
        },
      ],
      "changeType": 0,
      "diffHash": "2d42a681976a8151",
      "getJsonBodyToPreview": [Function],
      "location": Object {
        "inRequest": undefined,
        "inResponse": Object {
          "contentType": "application/json",
          "statusCode": 200,
        },
        "method": "GET",
        "pathId": "path_it2OyjUysW",
      },
      "title": Array [
        Object {
          "style": 0,
          "text": "undocumented",
        },
        Object {
          "style": 1,
          "text": "200",
        },
        Object {
          "style": 0,
          "text": "response with",
        },
        Object {
          "style": 1,
          "text": "application/json",
        },
        Object {
          "style": 0,
          "text": "observed",
        },
      ],
    },
    "previewTabs": Array [
      Object {
        "allowsExpand": false,
        "assertion": Array [],
        "ignoreRule": Object {
          "diffHash": "2d42a681976a8151",
          "newBodyInRequest": undefined,
        },
        "interactionPointers": Array [
          Object {
            "0": "8",
            "1": "e",
            "10": "f",
            "11": "6",
            "12": "d",
            "13": "-",
            "14": "4",
            "15": "d",
            "16": "3",
            "17": "c",
            "18": "-",
            "19": "b",
            "2": "f",
            "20": "a",
            "21": "7",
            "22": "1",
            "23": "-",
            "24": "5",
            "25": "e",
            "26": "3",
            "27": "7",
            "28": "9",
            "29": "2",
            "3": "f",
            "30": "3",
            "31": "7",
            "32": "8",
            "33": "0",
            "34": "c",
            "35": "e",
            "36": "4",
            "4": "9",
            "5": "5",
            "6": "b",
            "7": "1",
            "8": "-",
            "9": "4",
          },
          Object {
            "0": "8",
            "1": "e",
            "10": "f",
            "11": "6",
            "12": "d",
            "13": "-",
            "14": "4",
            "15": "d",
            "16": "3",
            "17": "c",
            "18": "-",
            "19": "b",
            "2": "f",
            "20": "a",
            "21": "7",
            "22": "1",
            "23": "-",
            "24": "5",
            "25": "e",
            "26": "3",
            "27": "7",
            "28": "9",
            "29": "2",
            "3": "f",
            "30": "3",
            "31": "7",
            "32": "8",
            "33": "0",
            "34": "c",
            "35": "e",
            "36": "4",
            "4": "9",
            "5": "5",
            "6": "b",
            "7": "1",
            "8": "-",
            "9": "4",
          },
        ],
        "invalid": true,
        "jsonTrailsByInteractions": Object {},
        "title": "200 application/json Response",
      },
    ],
    "toCommands": [Function],
    "updateSpecChoices": Object {
      "copy": Array [
        Object {
          "style": 0,
          "text": "Document",
        },
        Object {
          "style": 1,
          "text": "200",
        },
        Object {
          "style": 0,
          "text": "Response",
        },
      ],
      "includeNewBody": true,
      "isNewRegionDiff": true,
      "shapes": Array [],
    },
  },
}
`;

exports[`spec with paths, and new bodies 1`] = `Array []`;
